# dict-model

./: README.md  requirements.txt  setup.cfg
dict_model/: __init__.py  deserializers.py  django.py  lookup.py  query_sets.py  serializers.py
dict_models/: __init__.py  deserializers.py  query_sets.py  serializers.py
tests/: __init__.py  conftest.py  test_deserializers.py  test_dict_model.py  test_dict_model_django_integration.py  test_dict_model_field.py  test_dict_model_object_manager.py  test_lookup.py  test_query_sets.py  test_serializers.py
