[metadata]
name = dict_model
version = attr: dict_model.__version__
author = Patrick Schneeweis
author_email = psbleep@protonmail.com
url = https://github.com/digital-business-cards-dotcom/dict-model
description = Django model-like object not backed by the database.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_file = LICENSE
platform = any
keywords = django,orm,json
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
python_requires = >= 3.10
packages = dict_model
test_suite = tests
setup_requires =
    setuptools >= 40.6.0
install_requires =
    django >= 4.0.0
